# pylyrics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  clean_text.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pylyrics/: clean_text.py  download_data.py  extract_lyrics.py  plot_cloud.py
src/pylyrics/data/: credentials.json
src/pylyrics2/: download_data.py
tests/: test_clean_text.py  test_download_data.py  test_extract_lyrics.py  test_plot_cloud.py  test_pylyrics.py
tests/data/: lyrics_22.txt
