[tool.poetry]
name = "pylyrics"
version = "0.1.0"
description = "This package hehelps you extract and analyse lyrics like a piece of cake!"
authors = ["Group 2"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
lyricsgenius = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
