[tool.poetry]
name = "pylyrics"
version = "1.0.1"
description = "This package helps you extract and analyse lyrics like a piece of cake!"
authors = ["Group 2"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
kaggle = "^1.5.12"
pandas = "^1.3.5"
wordcloud = "^1.8.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
